--- a/src/style.scss
+++ b/src/style.scss
@@ -17,7 +17,7 @@
 }
 
 .formContainer {
-  background-color: #a7bcff;
+  background-color: #31bf3f;
   height: 100vh;
   display: flex;
   align-items: center;
@@ -33,13 +33,13 @@
     text-align: center;
     width: 35vh;
     .logo {
-      color: #5d5b8d;
+      color: #154c05;
       font-weight: bold;
       font-size: 24px;
     }
 
     .title {
-      color: #5d5b8d;
+      color: #154c05;
     }
     form {
       display: flex;
@@ -52,7 +52,7 @@
         border: none;
         border-bottom: 2px solid #a7bcff;
         &::placeholder {
-          color: #5d5b8d;
+          color: #154c05;
           font-weight: lighter;
         }
       }
@@ -60,7 +60,7 @@
         border-bottom: none;
       }
       button {
-        background-color: #7b96ec;
+        background-color: #31bf3f;
         color: white;
         padding: 10px;
         border-radius: 20px;
@@ -71,7 +71,7 @@
     }
 
     p {
-      color: #5d5b8d;
+      color: #154c05;
       font-size: 15px;
       display: flex;
       flex-direction: row;
@@ -88,7 +88,7 @@
 } // Login and register pages
 
 .home {
-  background-color: #a7bcff;
+  background-color: #51bd4b;
   height: 100vh;
   display: flex;
   align-items: center;
@@ -96,8 +96,8 @@
 
   .container {
     @include mobile {
-      height: 100%;
       width: 100%;
+      height: 100%;
     }
     border: 1px solid white;
     border-radius: 10px;
@@ -123,19 +123,21 @@
       // bottom: 40px;
       //right: 400px;
       margin-left: -153px;
-      background-color: #2f2d52;
+      background-color: #0b3202;
       color: #fff;
       //border-radius: 50px;
       text-align: center;
       box-shadow: 2px 2px 3px #999;
 
       @include mobile {
-        position: fixed;
+        position: relative;
+
+        //top: 40px;
         font-size: 10px;
-        margin-left: 120px;
-        max-width: max-content;
+        margin-left: auto;
+
         max-height: 20px;
-        background-color: #2f2d52;
+        background-color: #0b3202;
         width: 100%;
         color: whitesmoke;
         display: inline-block;
@@ -143,16 +145,18 @@
     }
 
     .sidebar {
-      background-color: #5d5b8d;
+      background-color: #154c05;
 
       flex: 1;
       @include mobile {
         height: 700px;
+        align-items: center;
+        justify-content: center;
       }
       .navbar {
         display: flex;
         align-items: center;
-        background-color: #2f2d52;
+        background-color: #0b3202;
         height: 50px;
         padding: 10px;
         justify-content: space-between;
@@ -182,7 +186,7 @@
             object-fit: cover;
           }
           button {
-            background-color: #5d5b8d;
+            background-color: #154c05;
             font-size: 10px;
             color: whitesmoke;
             height: 30px;
@@ -218,7 +222,7 @@
 
           cursor: pointer;
           &:hover {
-            background-color: #2f2d52;
+            background-color: #0b3202;
           }
 
           img {
@@ -240,7 +244,7 @@
         }
       }
       .chatslist {
-        background-color: #6865aa67;
+        background-color: #2e9e2267;
         height: calc(100% - 183px);
         overflow-y: scroll;
 
@@ -252,7 +256,7 @@
 
           cursor: pointer;
           &:hover {
-            background-color: #2f2d52;
+            background-color: #0b3202;
           }
 
           img {
@@ -291,12 +295,20 @@
       flex-direction: column;
       @include mobile {
         background-color: #ddddf7;
-        height: 1px;
+        width: 98%;
+        align-items: center;
+        justify-self: center;
+        padding-left: 10px;
       }
       .chatInfo {
+        @include mobile {
+          background-color: #154c05;
+          width: 100%;
+        }
+
         height: 50px;
         padding: 10px;
-        background-color: #5d5b8d;
+        background-color: #154c05;
         color: whitesmoke;
         display: flex;
         align-items: center;
@@ -308,11 +320,13 @@
           gap: 20px;
           margin-right: 20px;
         }
+        @include mobile {
+        }
       }
 
       .messages {
         height: calc(100% - 160px);
-        background-color: #ddddf7;
+        background-color: #63a95e;
         padding: 10px;
         overflow-y: scroll;
 
@@ -350,6 +364,9 @@
               border-radius: 0px 20px 20px 20px;
               max-width: max-content;
             }
+            .hidePadding {
+              padding: 0;
+            }
             img {
               margin-top: 15px;
             }
@@ -360,6 +377,9 @@
             }
 
             .original {
+              max-width: 400px;
+              max-height: 400px;
+
               @include mobile {
                 max-width: 300px;
                 max-height: 300px;
@@ -372,7 +392,7 @@
             .messageContent {
               align-items: flex-end;
               p {
-                background-color: #8da4f1;
+                background-color: #308513;
                 color: whitesmoke;
                 max-width: max-content;
                 border-radius: 20px 0px 20px 20px;
@@ -399,7 +419,9 @@
         background-color: white;
         padding: 10px;
         @include mobile {
-          height: 100px;
+          flex: 1;
+          height: 110px;
+          width: 100%;
         }
         textarea {
           border: none;
@@ -429,7 +451,7 @@
           .button2 {
             font-size: 20px;
             width: 100%;
-            background-color: #5d5b8d;
+            background-color: #154c05;
             @include mobile {
               height: 60px;
               border-radius: 20px;
