--- a/src/style.scss
+++ b/src/style.scss
@@ -393,7 +393,7 @@
               align-items: flex-end;
               p {
                 background-color: #308513;
-                color: whitesmoke;
+                color: white;
                 max-width: max-content;
                 border-radius: 20px 0px 20px 20px;
               }
